fix(root page): user name wrapping

--- a/_sass/_root_page.scss
+++ b/_sass/_root_page.scss
@@ -121,6 +121,7 @@ $follow-button-height: 40px;
 
 .user_snippet__verified {
   float: right;
+  color: $selected-bg;
 }
 
 .user_snippet__name--verified {
